<resources>
    <string name="app_name">PakBloodBank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_donors">Donors</string>
    <string name="title_blood_requests">Requests</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_default__image">Image Description</string>
    <string name="dashboard_keyword">Keyword</string>
    <string name="view_all">View All</string>
    <string name="home">Home</string>
    <string name="description">Description</string>
    <string name="verify_yourself">Verify yourself</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_code">Send Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend</string>
    <string name="sign_out">Sign out</string>
    <string name="invalid_phone">Invalid Phone</string>
    <string name="quota_ex">Quota exceeded</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="code_sent">Code Sent</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="verification_success">Verification Success</string>
    <string name="instant_validation">Instant Validation</string>
    <string name="signin_failed">Signin Failed</string>
    <string name="signed_out">You\'re Not Verified</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="your_city">Your City</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="loading">Loading…</string>
    <string name="isRTL">false</string>
    <string name="donorFilterItem">Filter</string>
    <string name="title_blood_banks">Blood Banks</string>
    <string name="title_banks">Banks</string>
    <string name="title_blog">Blog</string>
    <string name="title_profile">Profile</string>
    <string name="recent_donors">Recent Donors</string>
    <string name="popular_donors">Popular Donors</string>
    <string name="nearby_donors">Nearby Donors</string>
    <string name="donors_by_you">Donors by You</string>
    <string name="all_requests">All Requests</string>
    <string name="requests_by_you">Requests by You</string>
    <string name="nearby_requests">Nearby Requests</string>
    <string name="popular_requests">Popular Requests</string>
    <string name="recent_requests">Recent Requests</string>
    <string name="recent_blood_banks">Recent Blood Banks</string>
    <string name="popular_blood_banks">Popular Blood Banks</string>
    <string name="nearby_blood_banks">Nearby Blood Banks</string>
    <string name="no_data_found">No data found</string>
    <string name="by_setting_reminder">*By setting reminder your contact information would not show in donor list for next 3 months</string>
    <string name="enter_your_last_donated_date">Enter Your last donated date</string>
    <string name="last_donated_date">Last Donated Date\u0020</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="now_you_can_donate_on">Now You Can Donate On</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="dd">desc</string>
    <string name="custom_settings">Custom Settings</string>
    <string name="your_ad_consent">Your ad consent</string>
    <string name="show_personalized_ad">Show Personalized ads</string>
    <string name="enable_push_noti">Enable push notifications</string>
    <string name="blog_description">Description</string>
    <string name="ad_min_count">2</string>
    <string name="ad_max_count">4</string>
    <string name="ad_closemin_count">4</string>
    <string name="ad_closemax_count">7</string>
    <string name="add_donor">Add Donor</string>
    <string name="edit_donor">Edit Donor</string>
    <string name="add_request">Add request</string>
    <string name="edit_request">Edit request</string>
    <string name="error">Error</string>
    <string name="try_again_after_a_while">Error, Please try again after a while</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="menu_about">About</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="calls">Calls</string>
    <string name="reminder">Reminder</string>
    <string name="share_app_text">\"Hi there, checkout this awesome app i found on Play Store at: \"</string>
    <string name="share_app">Share app</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="donor_type">Donor Type</string>
    <string name="blood_group">Blood Group</string>
    <string name="last_donation_date">Last Donation Date</string>
    <string name="habits">Habits</string>
    <string name="hospital">Hospital</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="no_of_bags">No. of bags</string>
    <string name="your_message">Your message...</string>
    <string name="pick_location">Pick Location</string>
    <string name="search_location">Search Location</string>
    <string name="add_your_location">Add your Location</string>
    <string name="add_location">Add Location</string>
    <string name="details">Details</string>
    <string name="distance">Distance</string>
    <string name="contact_no">Contact#</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="views">Views</string>
    <string name="member_since">Member Since</string>
    <string name="call">Call</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="order_by">Order by</string>
    <string name="request_blood">Request Blood</string>
    <string name="please_share_your_feedback_about_this_donor">Please Share Your Feedback About this Donor!</string>
    <string name="subject">Subject</string>
    <string name="what_would_you_like_to_tell_us">What would you like to tell us?</string>
    <string name="please_select_donated_or_not">Please select Donated or Not!</string>
    <string name="donated">Donated</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="by_you">By You</string>
    <string name="show_donors_added_by_you">Show donors Added by you</string>
    <string name="registered_by">Registered By</string>
    <string name="points">Points</string>
    <string name="profile_views">Profile Views</string>
    <string name="contact">Contact</string>
    <string name="blood_groups">Blood Groups</string>
    <string name="donors_added_by_you">Donors added by you</string>
    <string name="requests_added_by_you">Requests Added by You</string>
    <string name="requested_by">Requested By</string>
    <string name="request_views">Request Views</string>
    <string name="requested_at">Requested at</string>
    <string name="show_requests_added_by_you">Show Requests Added by you</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="deactivate">Deactivate</string>
    <string name="fulfilled">Fulfilled</string>
    <string name="donor_successfully_added">Donor Successfully Added!</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_enter_donor_name">Please Enter Donor Name</string>
    <string name="posted_at">Posted at</string>
    <string name="kilometer">" km"</string>
    <string name="blood_bank_name">\"Blood Bank Name: \"</string>
    <string name="region">\"Region: \"</string>
    <string name="share_with">Share with</string>
    <string name="deactivate_this_donor">deactivate this donor</string>
    <string name="delete_this_donor">delete this donor</string>
    <string name="donor">Donor</string>
    <string name="type">Type</string>
    <string name="mobile">Mobile</string>
    <string name="last_donation">Last Donation</string>
    <string name="deactivate_this_request">deactivate this request</string>
    <string name="delete_this_request">delete this request</string>
    <string name="set_this_request_fulfilled">set this request fulfilled</string>
    <string name="requester">Requester</string>
    <string name="bags_needed">Bags Needed</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="name_cannot_be_less_than">Name Cannot be less than 5 characters</string>
    <string name="please_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="mobile_no_cannot_less_than">Mobile number Cannot be less than 11 characters</string>
    <string name="please_enter_no_of_bags">Please enter no of bags required</string>
    <string name="please_select_your_location">Please Select Your location</string>
    <string name="please_select_blood_group">Please Select Blood Group</string>
    <string name="please_select_country">Please Select Country</string>
    <string name="please_select_state">Please Select State</string>
    <string name="please_select_city">Please Select City</string>
    <string name="please_select_date_of_birth">Please Select Date of birth</string>
    <string name="please_enter_some_message">Please Enter some message</string>
    <string name="request_successfully_added">Request Successfully Added!</string>
    <string name="complete_registration">Complete registration</string>
    <string name="please_select_address">Please select address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="call_saved">Call Saved!</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="errorr">Error!!!</string>
    <string name="search_from_all">Search from All</string>
    <string name="all_states">All States</string>
    <string name="all_countries">All Countries</string>
    <string name="all_cities">All Cities</string>
    <string name="search_everywhere">Search Everywhere</string>
    <string name="none">None</string>
    <string name="a_to_z">A-Z</string>
    <string name="z_to_a">Z-A</string>
    <string name="nearby_you">Near by You</string>
    <string name="recent">Recent</string>
    <string name="popular">Popular</string>
    <string name="add_event">Add Event</string>
</resources>