<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_clock"
            android:title="@string/reminder" />
        <item
            android:id="@+id/nav_calls"
            android:icon="@drawable/ic_phone"
            android:title="@string/calls" />

    </group>

    <item android:title="@string/communicate">
        <menu>



            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_remove"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
