<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.PicklocationActivity"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.BBTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.BBTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_edit_text_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_search" />

        <AutoCompleteTextView
            android:id="@+id/locationPicker_autoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edit_text_background"
            android:dropDownHeight="300dp"
            android:hint="@string/search_location"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="?attr/inputTextColor"
            android:textColorHint="?attr/inputHintColor"
            android:textSize="14sp"
            android:visibility="visible" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:id="@+id/locationPicker_maps"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Space
            android:id="@+id/locationPicker_space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/locationPicker_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/locationPicker_space"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_location"
                app:tint="?attr/colorPrimary" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnSecondary"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/ic_location"
                app:tint="?inputIconColor" />

            <TextView
                android:id="@+id/locationPicker_currentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/add_your_location"
                android:textColor="?attr/inputTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/locationPicker_destinationButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/button_round_primary"
            android:text="@string/add_location" />
    </LinearLayout>
</LinearLayout>
